<resources>
    <string name="app_name">geobakapp</string>
    <string name="forgot_password">Forgot Password ?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="see_password">See Password</string>
    <string name="address">Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="logoTransition">logoTransition</string>
    <string name="title_activity_maps_main">Map</string>
    <string name="search">Search</string>
    <string name="type_restaurant">Type restaurant/tenant here..</string>
    <string name="seller_name">Seller name</string>
    <string name="distance">Distance</string>
    <string name="Price">Price</string>
    <string name="shipping_cost">Shipping Cost</string>
    <string name="rating">Rating</string>
    <string name="total_price">Total Price</string>
    <string name="order">Order</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="favorite">Favorite</string>
    <string name="account">Account</string>
    <string name="name">S</string>
    <string name="google_maps_key">AIzaSyBsQpLVB8oBQeG2IVYVt9zNbYWw2OI_48s</string>
    <string name="error_cant_get_data">something went wrong..</string>
    <string name="gps_disabled_ask">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="dialog_ask_loc_permission_title">Location required</string>
    <string name="dialog_ask_loc_permission_description">We need your location to calculate the price to deliver the goods</string>
    <string name="choose_partner">Choose one of our partner below..</string>
</resources>
