<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal|center_vertical"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              tools:context=".fragment.FragmentRegister">

    <ImageView
            android:id="@+id/logo_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:transitionName="@string/logoTransition"
            android:src="@drawable/ic_real_icon"/>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            style="@style/StandardInputLayout"
            app:errorEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="E-Mail"
                android:drawableStart="@drawable/ic_email_white_24dp"
                style="@style/StandardEditTextLayout"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            style="@style/StandardInputLayout"
            app:errorEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/full_name"
                android:drawableStart="@drawable/ic_account_circle_white_24dp"
                style="@style/StandardEditTextLayout"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            style="@style/StandardInputLayout"
            app:errorEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:hint="@string/phone_number"
                android:drawableStart="@drawable/ic_local_phone_white_24dp"
                style="@style/StandardEditTextLayout"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/StandardInputLayout"
            app:hintEnabled="false"
            app:errorEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/address"
                android:drawableStart="@drawable/ic_home_white_24dp"
                style="@style/StandardEditTextLayout"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleContentDescription="@string/see_password"
            app:passwordToggleDrawable="@drawable/password_visibility_toggler"
            app:passwordToggleTint="@color/password_toggler"
            app:passwordToggleEnabled="true"
            app:errorEnabled="true"
            app:hintEnabled="false"
            style="@style/StandardInputLayout"
            >
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="Password"
                android:drawableStart="@drawable/ic_lock_white_24dp"
                style="@style/StandardEditTextLayout"
                />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleContentDescription="@string/see_password"
            app:passwordToggleDrawable="@drawable/password_visibility_toggler"
            app:passwordToggleTint="@color/password_toggler"
            app:passwordToggleEnabled="true"
            app:errorEnabled="true"
            app:hintEnabled="false"
            style="@style/StandardInputLayout"
            >
        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/confirm_password"
                android:drawableStart="@drawable/ic_lock_white_24dp"
                style="@style/StandardEditTextLayout"
                />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_spacing"
            android:textAllCaps="true"
            android:fontFamily="sans-serif"
            android:textColor="@color/white"
            android:text="Register"
            android:background="@drawable/button_rounded_fill_corner"/>


</LinearLayout>